assets/css/monster.css
/*  GLOBAL
******************************************************************************/

.tally_monster_sprite_container, .tally_monster_text_wrapper_top, .tally_monster_text_wrapper_bottom, .tally_monster_points_wrapper {
    top: -700px;
    left: -700px;
    opacity: 0;
    position: absolute;
    z-index: 99999999999999;
}
/*  MONSTER SPRITE (WHEN IT LAUNCHES)
******************************************************************************/

svg.monster_path {
    position: fixed;
    top: 0;
    left: 0;
    /* make positive and opacity:1 to test */
    z-index: -9999999999999;
    opacity: 0;
}
svg.monster_path path {
    fill: none;
    stroke: none;
    /* stroke: #900; */
}
.tally_monster_sprite_container {
    position: absolute;
    height: 400px;
    width: 500px;
}
.tally_monster_sprite {
    position: relative;
    display: inline-block;
    margin: 0 auto;
    width: 500px;
    height: 400px;
    /* transform: scale(0.5); */
}
.tally_monster_sprite_inner {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    background: left center no-repeat;
    animation: monster_keyframes 0.4s steps(3) infinite;
}
.tally_monster_sprite_wrapper {
    margin: auto;
    border: 2px solid red;
    position: absolute;
    width: 500px;
    height: 400px;
    background: url('') left center no-repeat;
    transform: scale(0.5) !important;
}
.tally_monster_sprite {
    position: relative;
    display: inline-block;
    width: 100%;
    height: 100%;
    animation: monster_keyframes 0.4s steps(3) infinite;
}
@keyframes monster_keyframes {
    100% {
        background-position: -1500px;
    }
}
/*  MONSTER AWARD
******************************************************************************/
.tally_award_background {
    width: 4000px;
    height: 750px;
    transform: rotate(-20deg);
    position: fixed;
    bottom: -1420px;
    left: 20%;
    background-color: #462795;
    z-index: 99999998;
}
.tally_award_explode_background-1 {
    width: 4000px;
    height: 750px;
    transform: rotate(-20.5deg);
    position: fixed;
    bottom: -1400px;
    left: 20%;
    background-color: #F25132;
    z-index: 99999997;
}
.tally_award_explode_background-2 {
    width: 4000px;
    height: 750px;
    transform: rotate(-21deg);
    position: fixed;
    bottom: -1380px;
    left: 20%;
    background-color: #FCD067;
    z-index: 99999996;
}
.tally_award_text_wrapper {
    height: auto;
    width: 100vw;
    position: fixed;
    bottom: 0%;
    left: 650px;
    z-index: 99999999;
    visibility: hidden;
}
.tally_award_text {
    font: 1.3vw/1.6vw Arial, sans-serif;
    font-weight: normal;
    color: white;
    position: relative;
    width: 30%;
    height: 100%;
    left: 79%;
    z-index: 6;
    visibility: visible;
}
.tally_award_text a:link, .tally_award_text a:hover, .tally_award_text a:visited, .tally_award_text a:active {
    color: #DE4929;
    text-decoration-line: none;
}
.award_title {
    font: 3vw/3.5vw "Futura", "Trebuchet MS", Arial, sans-serif;
    position: relative;
    top: -20px;
    font-style: italic;
    text-align: center;
}
.award_subtitle {
    display: block;
    position: relative;
    top: -50px;
    font-weight: normal;
    text-align: center;
    background-color: #462795;
}
.award_did_you_know {
    position: relative;
    right: -30%;
    width: 40%;
    height: 20px;
    font-size: 2vw;
    z-index: 32;
    top: -10px;
}
.award_did_you_know h6 {
    font-family: "Futura", "Trebuchet MS", Arial, sans-serif;
    font-weight: normal;
    position: static;
    text-align: center;
    top: -20px;
    color: #FFF;
    background-color: #DE4929;
    padding-top: 4%;
    padding-bottom: 4%;
}
.award_fact {
    position: relative;
    top: -20px;
    text-align: center;
    border: 1px solid white;
    padding: 7%;
    left: 10%;
    width: 80%;
    height: 95px;
    background-color: #462795;
    overflow: auto;
    z-index: 30;
}

